--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,7 +32,7 @@ jobs:
           BINDIR: bin
         run: make -j releases
 
-      - name: Upload Release
+      - name: Upload Releases
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.Action_TOKEN }}
